--- a/target.html
+++ b/target.html
@@ -8,12 +8,12 @@
 </head>
 
 <body>
+<a href="https://amisharora.github.io/target/index.html">Go back to Target</a>
 
-<div id="rec1"></div>
+
+<div id="rec1">Replace this Div</div>
     
-<h1>
-Hello World!
-</h1>
+
 
 </body>
 
